Some updates in cart response
